Add temporary QR share codes for DEV
